--- a/_includes/header.html
+++ b/_includes/header.html
@@ -2,22 +2,23 @@
 <html>
 
 <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="chrome=1">
+    <meta name="description" content="Mathematician Turned Code-Slinger" />
+    <meta name="keywords" content="data science,big data,open source,math,mathematics,Jack Maney,resume" />
+    <meta http-equiv="content-type" content="text/html; charset=utf-8" />
     <title>
-        {% if page.title %} {{page.title}} {% else %} Jack Maney {% endif %}</title>
-    <link rel="stylesheet" href="stylesheets/styles.css">
-    <link rel="stylesheet" href="stylesheets/pygment_trac.css">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
-    <script src="javascripts/respond.js"></script>
-    <!--[if lt IE 9]>
-    <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
-    <![endif]-->
-    <!--[if lt IE 8]>
-    <link rel="stylesheet" href="stylesheets/ie.css">
-    <![endif]-->
-    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
-
+        {% if page.title %} {{page.title}} {% else %} Jack Maney {% endif %}
+    </title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- <link rel="shortcut icon" href="/images/favicon.ico" type="image/x-icon" /> -->
+    <!-- <link rel="icon" href="/images/favicon.ico" type="image/x-icon" /> -->
+    <link rel="stylesheet" type="text/css" href="//cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.1/css/bootstrap.min.css" />
+    <!-- <link rel="stylesheet" type="text/css" href="/css/sidebar.css"> -->
+    <!-- <link rel="stylesheet" type="text/css" href="/css/push-down.css"> -->
+    <!-- <link rel="stylesheet" type="text/css" href="/prettify/prettify.css">
+    <link rel="stylesheet" type="text/css" href="/css/desert.css"> -->
+    <link href="//cdnjs.cloudflare.com/ajax/libs/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
+    <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+    <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.1/js/bootstrap.min.js"></script>
 </head>
 
 <body>
