--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,8 +1,11 @@
-{% include header.html %}
-{% include nav.html %}
-
-<div class="wrapper">
-    {{ content }}
+{% include header.html %} {% include nav.html %}
+<div class="container">
+    <div class="row">
+        <div class=".col-md-9">
+            {{ content }}
+        </div>
+    </div>
 </div>
+
 
 {% include footer.html %}
