--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -21,50 +21,26 @@
                         {% endif %}
                         <a href="/resume/">Resume <span class="sr-only">(current)</span></a>
                     </li>
-                    {% if page.is_code_page %}
-                    <li class="dropdown active">
-                        {% else %}
-                        <li class="dropdown">
-                            {% endif %}
-                            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Code Projects <span class="caret"></span></a>
-                            <ul class="dropdown-menu" role="menu">
-                                <li><a href="/code/diophantus/">Diophantus </a>
-                                </li>
-                                <li><a href="/code/ucc/">Universal Correlation Coefficient</a>
-                                </li>
-                                <li><a href="#">Something else here</a>
-                                </li>
-                                <li class="divider"></li>
-                                <li><a href="#">Separated link</a>
-                                </li>
-                                <li class="divider"></li>
-                                <li><a href="#">One more separated link</a>
-                                </li>
-                            </ul>
-                        </li>
+                    <li>
+                        <a href="https://www.linkedin.com/in/jackmaney"><i class="fa fa-linkedin-square"></i></a> {% if page.is_code_page %}
+                        <li class="dropdown active">
+                            {% else %}
+                            <li class="dropdown">
+                                {% endif %}
+                                <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Code Projects <span class="caret"></span></a>
+                                <ul class="dropdown-menu" role="menu">
+                                    <li><a href="/code/diophantus/">Diophantus </a>
+                                    </li>
+                                    <li><a href="/code/ucc/">Universal Correlation Coefficient</a>
+                                    </li>
+                                </ul>
+                            </li>
             </ul>
-            <form class="navbar-form navbar-left" role="search">
-                <div class="form-group">
-                    <input type="text" class="form-control" placeholder="Search">
-                </div>
-                <button type="submit" class="btn btn-default">Submit</button>
-            </form>
             <ul class="nav navbar-nav navbar-right">
-                <li><a href="#">Link</a>
-                </li>
-                <li class="dropdown">
-                    <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Dropdown <span class="caret"></span></a>
-                    <ul class="dropdown-menu" role="menu">
-                        <li><a href="#">Action</a>
-                        </li>
-                        <li><a href="#">Another action</a>
-                        </li>
-                        <li><a href="#">Something else here</a>
-                        </li>
-                        <li class="divider"></li>
-                        <li><a href="#">Separated link</a>
-                        </li>
-                    </ul>
+                <li>
+                    {% if page.code_url %}
+                    <a href="{{page.code_url}}"><i class="fa fa-github"></i></a> {% else %}
+                    <a href="https://github.com/jackmaney/github-homepage"><i class="fa fa-github"></i></a> {% endif %}
                 </li>
             </ul>
         </div>
