--- a/_includes/header.html
+++ b/_includes/header.html
@@ -9,16 +9,11 @@
         {% if page.title %} {{page.title}} {% else %} Jack Maney {% endif %}
     </title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!-- <link rel="shortcut icon" href="/images/favicon.ico" type="image/x-icon" /> -->
-    <!-- <link rel="icon" href="/images/favicon.ico" type="image/x-icon" /> -->
     <link rel="stylesheet" type="text/css" href="//cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.1/css/bootstrap.min.css" />
-    <!-- <link rel="stylesheet" type="text/css" href="/css/sidebar.css"> -->
-    <!-- <link rel="stylesheet" type="text/css" href="/css/push-down.css"> -->
-    <!-- <link rel="stylesheet" type="text/css" href="/prettify/prettify.css">
-    <link rel="stylesheet" type="text/css" href="/css/desert.css"> -->
     <link href="//cdnjs.cloudflare.com/ajax/libs/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
     <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
     <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.1/js/bootstrap.min.js"></script>
+    <link rel="stylesheet" type="text/css" href="/stylesheets/pygment.css" />
 </head>
 
 <body>
