--- a/_includes/pagination.html
+++ b/_includes/pagination.html
@@ -1,13 +1,13 @@
-<div class="pagination">
-    <ul>
+<nav>
+    <ul class="pagination">
         {% if paginator.previous_page %} {% if paginator.previous_page == 1 %}
-        <li><a href="/">Prev</a>
+        <li><a href="/"><i class="fa fa-chevron-left"></i></a>
         </li>
         {% else %}
-        <li><a href="/page{{ paginator.previous_page }}">Prev</a>
+        <li><a href="/page{{ paginator.previous_page }}"><i class="fa fa-chevron-left"></i></a>
         </li>
         {% endif %} {% else %}
-        <li><span class="disabled">Prev</span>
+        <li><span class="disabled"><i class="fa fa-chevron-left"></i></span>
         </li>
         {% endif %} {% if paginator.page == 1 %}
         <li><span class="active">1</span>
@@ -22,11 +22,11 @@
         <li><a href="/page{{ count }}">{{ count }}</a>
         </li>
         {% endif %} {% endfor %} {% if paginator.next_page %}
-        <li><a href="/page{{ paginator.next_page }}">Next</a>
+        <li><a href="/page{{ paginator.next_page }}"><i class="fa fa-chevron-right"></i></a>
         </li>
         {% else %}
-        <li><span class="disabled">Next</span>
+        <li><span class="disabled"><i class="fa fa-chevron-right"></i></span>
         </li>
         {% endif %}
     </ul>
-</div>
+</nav>
