Fixed default GitHub link

--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -40,7 +40,7 @@
                 <li>
                     {% if page.code_url %}
                     <a href="{{page.code_url}}"><i class="fa fa-github"></i></a> {% else %}
-                    <a href="https://github.com/jackmaney/github-homepage"><i class="fa fa-github"></i></a> {% endif %}
+                    <a href="https://github.com/jackmaney/jackmaney.github.io"><i class="fa fa-github"></i></a> {% endif %}
                 </li>
             </ul>
         </div>
