--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,5 +1,7 @@
 {% include header.html %} {% include nav.html %}
+
 <div class="container">
+    {% include resume_buttons.html %}
     <div class="row">
         <div class=".col-md-9">
             {{ content }}
