Slight resume tweak to sync with LinkedIn

--- a/_includes/resume_body.html
+++ b/_includes/resume_body.html
@@ -11,7 +11,9 @@
 <li>Able to derive insights and extract business value from data sets with thousands to billions of rows</li>
 <li>Writing and optimizing complex SQL queries</li>
 <li>Building prototypes of data products using relational databases, MPP systems, and Python</li>
-<li>Experienced problem-solver with very strong quantitative skills</li>
+<li>Researching and implementing algorithms from white papers and academic literature.</li>
+<li>A/B testing recommender systems.</li>
+<li>Experienced problem-solver with very strong quantitative skills.</li>
 </ul>
 </div>
 
@@ -20,11 +22,6 @@
 <div class="well">
 <h3>DST's Applied Analytics Group</h3>
 <p>Senior Data Scientist - December 2013--Present</p>
-
-<blockquote><a href="http://www.dstsystems.com">DST is a trusted global provider of technology-based service solutions that help our clients grow their business and provide exceptional customer experiences.</a>
-
-<a href="http://dstsystems.com/solutions/applied-analytics.html">DST's Applied Analytics Group exists to assist clients in creating value from data across their organization through the creation of actionable insights.</a>
-</blockquote>
 
 <ul>
 
@@ -51,8 +48,6 @@
 <h3>BA Services</h3>
 <p>Data Scientist - May 2013--November 2013</p>
 
-<blockquote><a href="http://www.baservicesco.com/?page_id=1031">BA Services, LLC. Is a rapidly growing consulting company specializing in software development and analytics. We specialize in building products and analyzing their results to drive revenue, decrease operating costs, increase business value and ultimately create a competitive advantage over a client’s competition.</a></blockquote>
-
 <ul>
 <li>Created and cross-validated probit regression models to find the most significant attributes upon which to sort call queues in order to increase customer retention.</li>
 
@@ -67,8 +62,6 @@
 <div class="well">
 <h3>C2FO</h3>
 <p>Implementation Specialist (Contract) - January 2013--May 2013</p>
-
-<blockquote><a href="https://c2fo.com/">C2FO Collaborative Cash Flow Optimization: The global market for working capital and risk-free profit.</a></blockquote>
 
 <ul>
 <li>Optimized the C2FO algorithm for Market Clearing Events, making it run an average of two orders of magnitude faster.</li>
@@ -86,8 +79,6 @@ Titles Held:<br>
 <li>Data Analyst and Mathematician - February 2011--January 2012</li>
 <li>Data Analyst - July 2010-February 2011</li>
 </ul>
-
-<blockquote><a href="http://www.adknowledge.com/about/company-overview">Adknowledge, the fourth largest advertiser marketplace, specializes in performance-based marketing solutions that help make the long tail web accessible to search engine advertisers.  Utilizing powerful predictive technology and completely anonymous consumer response patterns, we connect advertisers with consumers across multiple channels, including email, search, mobile, domains, and social networks.</a></blockquote>
 
 <ul>
 <li>Performed data mining and summarized results that contributed to the winning of a $50,000 advertiser contract</li>
