--- a/_includes/resume_body.html
+++ b/_includes/resume_body.html
@@ -20,8 +20,13 @@
 <h2>Experience</h2>
 
 <div class="well">
+    <h3>Pinsight Media+</h3>
+    <p>Data Scientist III - October 2016--Present</p>
+</div>
+
+<div class="well">
 <h3>DST's Applied Analytics Group</h3>
-<p>Senior Data Scientist - December 2013--Present</p>
+<p>Senior Data Scientist - December 2013--October 2016</p>
 
 <ul>
 
