Fixed tags, so that they're lists now...

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -8,7 +8,7 @@
                 {{ content }}
             </div>
             {% if page.tags %}
-            <p class="muted">Tags: {{ page.tags | join ', '}}</p>
+            <p class="muted">Tags: {{ page.tags | join: ', '}}</p>
             {% endif %}
         </div>
     </div>
