Resume tweak to sync with LinkedIn profile

--- a/_includes/resume_body.html
+++ b/_includes/resume_body.html
@@ -2,8 +2,12 @@
     <h1>Jack Maney</h1>
 
     <div class="well">
-        <p>Email: <a href="mailto:jackmaney@gmail.com">jackmaney@gmail.com</a></p>
-        <p>Website: <a href="http://jackmaney.com">jackmaney.com</a></p>
+        <p>Email:
+            <a href="mailto:jackmaney@gmail.com">jackmaney@gmail.com</a>
+        </p>
+        <p>Website:
+            <a href="http://jackmaney.com">jackmaney.com</a>
+        </p>
     </div>
 
     <div class="well">
@@ -25,12 +29,20 @@
 
         <ul>
             <li>
+                Built recommender engines for our on-device monetization products. Worked with development teams to ensure that the back
+                end would be set up for AB testing.
+            </li>
+            <li>
                 Contributed to a project of predicting demographic attributes for users in our real-time bidding (RTB) system. This resulted
                 in collaborations with Marketing that led to two whitepapers:
 
                 <ul>
-                    <li><a href="http://whitepaper.pinsightmedia.com/age">Guess My Age: Age Discrepancies Across Ad Exchanges</a></li>
-                    <li><a href="https://pinsightmedia.com/blog/apptopicmodeling">There's an App for That: But What Does It Say About My Consumer?</a></li>
+                    <li>
+                        <a href="http://whitepaper.pinsightmedia.com/age">Guess My Age: Age Discrepancies Across Ad Exchanges</a>
+                    </li>
+                    <li>
+                        <a href="https://pinsightmedia.com/blog/apptopicmodeling">There's an App for That: But What Does It Say About My Consumer?</a>
+                    </li>
                 </ul>
             </li>
             <li>
@@ -100,7 +112,9 @@
 
     <div class="well">
         <h3>Adknowledge</h3>
-        July 2010--November 2012<br> Titles Held:<br>
+        July 2010--November 2012
+        <br> Titles Held:
+        <br>
         <ul>
             <li>Sr Data Analyst and Mathematician - January 2012--November 2012</li>
             <li>Data Analyst and Mathematician - February 2011--January 2012</li>
@@ -113,8 +127,9 @@
             <li>Presented technical and mathematical concepts to non-technical audiences, including several layers of management
                 and a venture capital investor.</li>
 
-            <li>Developed an application in Perl using <a href="https://metacpan.org/module/DBI">DBI</a> for <a href="http://en.wikipedia.org/wiki/K-means%2B%2B">k-means++ clustering</a>.
-                This application is able to handle data sets of millions of rows with 1--100 variables.</li>
+            <li>Developed an application in Perl using
+                <a href="https://metacpan.org/module/DBI">DBI</a> for
+                <a href="http://en.wikipedia.org/wiki/K-means%2B%2B">k-means++ clustering</a>. This application is able to handle data sets of millions of rows with 1--100 variables.</li>
 
             <li>Found a way to implement a regression algorithm--on a dataset with 30 million rows and 250 variables--that was
                 previously thought impossible to implement due to scale</li>
@@ -163,10 +178,13 @@
     <h2>Open-source Software</h2>
 
     <div class="well">
-        <h3><a href="https://github.com/jackmaney/ucc">Universal Correlation Coefficient</a></h3>
+        <h3>
+            <a href="https://github.com/jackmaney/ucc">Universal Correlation Coefficient</a>
+        </h3>
 
-        <p>At the 2011 Joint Statistical Meetings, <a href="http://www.amstat.org/meetings/jsm/2011/onlineprogram/AbstractDetails.cfm?abstractid=303386">a paper was presented</a>            that introduced the idea of a Universal Correlation Coefficient. This coefficient measures the degree of dependency
-            (but not the form of dependency) for two discrete random variables.</p>
+        <p>At the 2011 Joint Statistical Meetings,
+            <a href="http://www.amstat.org/meetings/jsm/2011/onlineprogram/AbstractDetails.cfm?abstractid=303386">a paper was presented</a> that introduced the idea of a Universal Correlation Coefficient. This coefficient measures
+            the degree of dependency (but not the form of dependency) for two discrete random variables.</p>
 
         <p>I have written an R library that implements this Universal Correlation Coefficient. This coefficient can be used
             to automate the discovery of (potentially non-linear) relationships among pairs of discrete random variables.</p>
@@ -174,14 +192,18 @@
     </div>
 
     <div class="well">
-        <h3><a href="http://pg-utils.readthedocs.io/en/latest/?badge=latest#">pg-utils: Utilities for working with PostgreSQL</a></h3>
+        <h3>
+            <a href="http://pg-utils.readthedocs.io/en/latest/?badge=latest#">pg-utils: Utilities for working with PostgreSQL</a>
+        </h3>
 
         <p>Some handy utilities that I've written for processing data in either PostgreSQL or Greenplum.</p>
 
     </div>
 
     <div class="well">
-        <h3><a href="https://github.com/jackmaney/python-stdlib-list">Python Standard Library List</a></h3>
+        <h3>
+            <a href="https://github.com/jackmaney/python-stdlib-list">Python Standard Library List</a>
+        </h3>
 
         <p>Lists of names of packages in the Python standard library (for versions 2.6, 2.7, and 3.2-5), along with the code
             used to grab the list of libraries from the official Python docs. Surprisingly, this is my most popular repository
@@ -190,7 +212,9 @@
     </div>
 
     <div class="well">
-        <h3><a href="https://github.com/jackmaney/Diophantus">Diophantus</a></h3>
+        <h3>
+            <a href="https://github.com/jackmaney/Diophantus">Diophantus</a>
+        </h3>
 
         <p>Diophantus, a pet project created to teach myself Java, originated as Mathematica code that I wrote as a graduate
             student. The original code generated examples and helped form conjectures for what became a series of two peer-reviewed
@@ -207,26 +231,34 @@
             <li>Apache Spark, Apache Hive, Apache Hadoop, HDFS</li>
 
             <li>
-                Python, <a href="http://spark.apache.org/docs/latest/api/python/index.html">PySpark</a>,
+                Python,
+                <a href="http://spark.apache.org/docs/latest/api/python/index.html">PySpark</a>,
                 <a href="http://pandas.pydata.org/">Pandas</a>,
-                <a href="http://www.numpy.org/">NumPy</a>, <a href="https://www.scipy.org/">SciPy</a>,
-                <a href="http://scikit-learn.org/stable/">scikit-learn</a>, <a href="http://matplotlib.org/">matplotlib</a>,
+                <a href="http://www.numpy.org/">NumPy</a>,
+                <a href="https://www.scipy.org/">SciPy</a>,
+                <a href="http://scikit-learn.org/stable/">scikit-learn</a>,
+                <a href="http://matplotlib.org/">matplotlib</a>,
                 <a href="https://web.stanford.edu/~mwaskom/software/seaborn/">seaborn</a>, PyCharm
             </li>
 
             <li>
-                Relational Databases, <a href="http://www.greenplum.com/">Greenplum</a> (Massively Parallel Processing Distributed
-                System), PostgreSQL, Oracle, MySQL, Microsoft SQL Server, MS SQL, OLAP, SQL
+                Relational Databases,
+                <a href="http://www.greenplum.com/">Greenplum</a> (Massively Parallel Processing Distributed System), PostgreSQL, Oracle, MySQL, Microsoft SQL
+                Server, MS SQL, OLAP, SQL
             </li>
 
             <li>
-                Perl, <a href="https://metacpan.org/module/Moose">Moose (OO Perl)</a>, DBI, threads, threads::shared, Thread::Queue,
-                Template::Toolkit
+                Perl,
+                <a href="https://metacpan.org/module/Moose">Moose (OO Perl)</a>, DBI, threads, threads::shared, Thread::Queue, Template::Toolkit
             </li>
 
-            <li><a href="http://www.r-project.org/">R</a></li>
+            <li>
+                <a href="http://www.r-project.org/">R</a>
+            </li>
 
-            <li><a href="http://www.qlikview.com/">QlikView</a></li>
+            <li>
+                <a href="http://www.qlikview.com/">QlikView</a>
+            </li>
 
             <li>Java, JUnit, Eclipse</li>
 
@@ -238,9 +270,11 @@
 
             <li>Linux, openSUSE, Ubuntu, CentOS, RHEL, bash</li>
 
-            <li>The <a href="https://42matters.com/docs/overview">42matters API</a> for app metadata</li>
+            <li>The
+                <a href="https://42matters.com/docs/overview">42matters API</a> for app metadata</li>
 
-            <li><a href="http://infegy.com/social-media-analytics">Social Radar API</a>, Facebook Ads API</li>
+            <li>
+                <a href="http://infegy.com/social-media-analytics">Social Radar API</a>, Facebook Ads API</li>
 
         </ul>
 
@@ -289,7 +323,9 @@
 
             <li>QlikView Developer Training from Qlik, 2013</li>
 
-            <li>Attended <a href="http://www.kdd.org/kdd2014/">KDD 2014</a></li>
+            <li>Attended
+                <a href="http://www.kdd.org/kdd2014/">KDD 2014</a>
+            </li>
 
             <li>Greenplum User Training from Pivotal, 2014</li>
 
