Added AWS training to resume, tweaked _config.yml to change deprecated key

--- a/_includes/resume_body.html
+++ b/_includes/resume_body.html
@@ -260,13 +260,15 @@
                 <a href="http://www.qlikview.com/">QlikView</a>
             </li>
 
+            <li>Scala</li>
+
             <li>Java, JUnit, Eclipse</li>
 
             <li>JSON, Parquet</li>
 
             <li>Git, SVN, GitHub, GitLab, Assembla, Source Control, Version Control</li>
 
-            <li>JIRA, Pivotal Tracker, Confluence</li>
+            <li>JIRA, Pivotal Tracker, Confluence, Assembla</li>
 
             <li>Linux, openSUSE, Ubuntu, CentOS, RHEL, bash</li>
 
@@ -336,6 +338,8 @@
             <li>Apache Spark training from Databricks, 2017</li>
 
             <li>Apache Cassandra training from Learning Tree International, 2017</li>
+
+            <li>AWS Training, 2018</li>
 
         </ul>
 
