A few more minor resume tweaks and added help target to Makefile

--- a/_includes/resume_body.html
+++ b/_includes/resume_body.html
@@ -33,6 +33,9 @@
                 end would be set up for AB testing.
             </li>
             <li>
+                Streamlined the ETL processes for building AB testing dashboards.
+            </li>
+            <li>
                 Contributed to a project of predicting demographic attributes for users in our real-time bidding (RTB) system. This resulted
                 in collaborations with Marketing that led to two whitepapers:
 
@@ -247,6 +250,12 @@
                 Server, MS SQL, OLAP, SQL
             </li>
 
+            <li>Scala</li>
+
+            <li>Java, JUnit, Eclipse</li>
+
+            <li>Tableau, QlikView</li>
+
             <li>
                 Perl,
                 <a href="https://metacpan.org/module/Moose">Moose (OO Perl)</a>, DBI, threads, threads::shared, Thread::Queue, Template::Toolkit
@@ -255,14 +264,6 @@
             <li>
                 <a href="http://www.r-project.org/">R</a>
             </li>
-
-            <li>
-                <a href="http://www.qlikview.com/">QlikView</a>
-            </li>
-
-            <li>Scala</li>
-
-            <li>Java, JUnit, Eclipse</li>
 
             <li>JSON, Parquet</li>
 
@@ -276,7 +277,8 @@
                 <a href="https://42matters.com/docs/overview">42matters API</a> for app metadata</li>
 
             <li>
-                <a href="http://infegy.com/social-media-analytics">Social Radar API</a>, Facebook Ads API</li>
+                <a href="http://infegy.com/social-media-analytics">Social Radar API</a>, Facebook Ads API
+            </li>
 
         </ul>
 
