Retweaking the training bullets on the resume

--- a/_includes/resume_body.html
+++ b/_includes/resume_body.html
@@ -319,29 +319,30 @@
     <div class="well">
 
         <ul>
-            <li>PostgreSQL Training from Webucator, 2010</li>
-
-            <li>Java Training from Webucator, 2012</li>
-
-            <li>Noble Dialer Operations Training from Noble Systems, 2013</li>
-
-            <li>QlikView Developer Training from Qlik, 2013</li>
-
-            <li>Attended
-                <a href="http://www.kdd.org/kdd2014/">KDD 2014</a>
-            </li>
-
-            <li>Greenplum User Training from Pivotal, 2014</li>
-
-            <li>Data Anonymization Training from Privacy Analytics, 2015</li>
-
-            <li>Hadoop and MapReduce Training from Hortonworks, 2015</li>
-
-            <li>Apache Spark training from Databricks, 2017</li>
+            <li>AWS Training from Amazon Web Services, 2018</li>
 
             <li>Apache Cassandra training from Learning Tree International, 2017</li>
 
-            <li>AWS Training, 2018</li>
+            <li>Apache Spark training from Databricks, 2017</li>
+
+            <li>Hadoop and MapReduce Training from Hortonworks, 2015</li>
+
+            <li>Data Anonymization Training from Privacy Analytics, 2015</li>
+
+            <li>Greenplum User Training from Pivotal, 2014</li>
+
+            <li>
+                Attended
+                <a href="http://www.kdd.org/kdd2014/">KDD 2014</a>
+            </li>
+
+            <li>QlikView Developer Training from Qlik, 2013</li>
+
+            <li>Noble Dialer Operations Training from Noble Systems, 2013</li>
+
+            <li>Java Training from Webucator, 2012</li>
+
+            <li>PostgreSQL Training from Webucator, 2010</li>
 
         </ul>
 
