--- a/_includes/resume_body.html
+++ b/_includes/resume_body.html
@@ -12,11 +12,18 @@
 
     <div class="well">
         <ul>
-            <li>Able to derive insights and extract business value from data sets with thousands to billions of rows.</li>
-            <li>Writing and optimizing complex SQL queries.</li>
-            <li>Building prototypes of data products using relational databases, Apache Spark, MPP systems, and Python.</li>
+            <li>
+                Data Science professional with a decade of experience in the telecommunications, ad tech, and financial service sectors.
+            </li>
+            <li>
+                Able to derive insights and extract business value from data sets with thousands to billions of rows.
+            </li>
+            <li>
+                Building prototypes of data products using relational databases, Apache Spark, MPP systems, and Python
+            </li>
+            <li>Working closely with Data Engineers to productionalize product prototypes.</li>
             <li>Researching and implementing algorithms from white papers and academic literature.</li>
-            <li>A/B testing recommender systems.</li>
+            <li>Creating and A/B testing recommender systems.</li>
             <li>Experienced problem-solver with very strong quantitative skills.</li>
         </ul>
     </div>
@@ -24,8 +31,37 @@
     <h2>Experience</h2>
 
     <div class="well">
+        <h3>TruFactor</h3>
+        <p>Lead Data Scientist - November 2018--May 2020</p>
+
+        <ul>
+            <li>
+                Consolidated Point of Interest (POI) data from multiple sources to build a single POI database used across the company.
+            </li>
+
+            <li>
+                Combined the POI dataset with GPS and network location data to build a Visits dataset. Worked closely with product managers to ensure that the product aligned with customer expectations. Performed several white glove analyses for customer trials, which received positive feedback.
+            </li>
+
+            <li>
+                Worked closely with Data Engineering to productionalize the Visits product, and to quickly deploy hotfixes and feature enhancements.
+            </li>
+
+            <li>
+                Used multiple data sources--including scraping and third-party APIs--to build and maintain a mapping from URLs to publishers.
+            </li>
+
+            <li>
+                Mentored members of the Data Science and Business Intelligence teams.
+            </li>
+
+        </ul>
+    </div>
+
+    <div class="well">
+
         <h3>Pinsight Media</h3>
-        <p>Data Scientist III - October 2016--Present</p>
+        <p>Data Scientist III - October 2016--October 2018</p>
 
         <ul>
             <li>
@@ -208,9 +244,7 @@
             <a href="https://github.com/jackmaney/python-stdlib-list">Python Standard Library List</a>
         </h3>
 
-        <p>Lists of names of packages in the Python standard library (for versions 2.6, 2.7, and 3.2-5), along with the code
-            used to grab the list of libraries from the official Python docs. Surprisingly, this is my most popular repository
-            on GitHub.</p>
+        <p>Lists of names of packages in the Python standard library (for versions 2.6, 2.7, and 3.2-8), along with the code used to grab the list of libraries from the official Python docs. This is my most popular repository on GitHub.</p>
 
     </div>
 
@@ -219,9 +253,7 @@
             <a href="https://github.com/jackmaney/Diophantus">Diophantus</a>
         </h3>
 
-        <p>Diophantus, a pet project created to teach myself Java, originated as Mathematica code that I wrote as a graduate
-            student. The original code generated examples and helped form conjectures for what became a series of two peer-reviewed
-            mathematical publications.</p>
+        <p>Diophantus, a pet project created to teach myself Java, originated as Mathematica code that I wrote as a graduate student. The original code generated examples and helped form conjectures for what became a series of two peer-reviewed mathematical publications.</p>
     </div>
 
     <h2>Skills</h2>
@@ -231,15 +263,20 @@
 
         <ul>
 
+            <li>AWS, EMR, EC2, S3</li>
+
             <li>Apache Spark, Apache Hive, Apache Hadoop, HDFS</li>
 
             <li>
                 Python,
                 <a href="http://spark.apache.org/docs/latest/api/python/index.html">PySpark</a>,
+                <a href="https://pypi.org/project/h3/">H3</a>,
+                <a href="https://pypi.org/project/Shapely/">Shapely</a>,
                 <a href="http://pandas.pydata.org/">Pandas</a>,
                 <a href="http://www.numpy.org/">NumPy</a>,
                 <a href="https://www.scipy.org/">SciPy</a>,
                 <a href="http://scikit-learn.org/stable/">scikit-learn</a>,
+                <a href="https://requests.readthedocs.io/en/master/">Requests</a>,
                 <a href="http://matplotlib.org/">matplotlib</a>,
                 <a href="https://web.stanford.edu/~mwaskom/software/seaborn/">seaborn</a>, PyCharm
             </li>
@@ -250,28 +287,28 @@
                 Server, MS SQL, OLAP, SQL
             </li>
 
-            <li>Scala</li>
-
-            <li>Java, JUnit, Eclipse</li>
+            <li>Kotlin, Java, Scala, IntelliJ IDEA, Eclipse</li>
 
             <li>Tableau, QlikView</li>
+
+            <li>JSON, GeoJSON, Parquet, CSV</li>
+
+            <li>
+                <a href="http://www.r-project.org/">R</a>
+            </li>
 
             <li>
                 Perl,
                 <a href="https://metacpan.org/module/Moose">Moose (OO Perl)</a>, DBI, threads, threads::shared, Thread::Queue, Template::Toolkit
             </li>
 
-            <li>
-                <a href="http://www.r-project.org/">R</a>
-            </li>
-
-            <li>JSON, Parquet</li>
-
             <li>Git, SVN, GitHub, GitLab, Assembla, Source Control, Version Control</li>
 
             <li>JIRA, Pivotal Tracker, Confluence, Assembla</li>
 
-            <li>Linux, openSUSE, Ubuntu, CentOS, RHEL, bash</li>
+            <li>Linux, Amazon Linux, openSUSE, Ubuntu, CentOS, RHEL, bash</li>
+
+            <li>The <a href="https://aylien.com/text-api/">Aylien text analysis API</a></li>
 
             <li>The
                 <a href="https://42matters.com/docs/overview">42matters API</a> for app metadata</li>
@@ -332,8 +369,7 @@
             <li>Greenplum User Training from Pivotal, 2014</li>
 
             <li>
-                Attended
-                <a href="http://www.kdd.org/kdd2014/">KDD 2014</a>
+                Attended <a href="http://www.kdd.org/kdd2014/">KDD 2014</a>
             </li>
 
             <li>QlikView Developer Training from Qlik, 2013</li>
