--- a/_includes/header.html
+++ b/_includes/header.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <meta name="description" content="Mathematician Turned Code-Slinger" />
+    <meta name="description" content="Mathematics and Data Science" />
     <meta name="keywords" content="data science,big data,open source,math,mathematics,Jack Maney,resume" />
     <meta http-equiv="content-type" content="text/html; charset=utf-8" />
     <title>
